# Esp32MqttSeeder

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build-and-publish.yml
certs/: .gitignore
components/app_config/: app_runtime_config.c
components/app_config/include/: app_config.h  app_runtime_config.h
components/cmd_handler/: CMakeLists.txt  cmd_handler.c
components/cmd_handler/include/: cmd_handler.h
components/network/: CMakeLists.txt  mqtt_client_manager.c  wifi_manager.c
components/network/include/: mqtt_client_manager.h  wifi_manager.h
components/publishers/: CMakeLists.txt  counter_publisher.c  heartbeat_publisher.c  init_publisher.c  log_publisher.c
components/publishers/include/: counter_publisher.h  heartbeat_publisher.h  init_publisher.h  log_publisher.h
docs/: mqtt-tls-certificates.md  mqtt-topics.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
test/mqtt/: certs-config.example.yaml  generate_local_tls_certs.py  mqtt_passwd.txt  run_local_mqtt_broker_tls.py  run_mqtt_tls_smoke.ps1  test_mqtt_tls.py
